--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
     <h1>Fundamentos</h1>
 
-    <script src="fetch-3.js"></script>
+    <img src="" alt="">
+
+    <script src="fetch-4.js"></script>
 
 
 </body>
